SERVER-30464 edit startup warning when replset member started as standalone